--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
     },
     "dependencies": {
         "@auth/prisma-adapter": "^2.4.1",
+        "@hookform/resolvers": "^3.6.0",
         "@prisma/client": "^5.16.1",
         "@radix-ui/react-avatar": "^1.1.0",
+        "@radix-ui/react-checkbox": "^1.1.1",
         "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "^2.1.1",
+        "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-progress": "^1.1.0",
+        "@radix-ui/react-radio-group": "^1.2.0",
+        "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-tabs": "^1.1.0",
+        "@radix-ui/react-toast": "^1.2.1",
         "@radix-ui/react-tooltip": "^1.1.1",
         "@supabase/supabase-js": "^2.44.2",
         "class-variance-authority": "^0.7.0",
@@ -28,13 +34,17 @@
         "next-auth": "5.0.0-beta.19",
         "react": "^18",
         "react-dom": "^18",
+        "react-hook-form": "^7.52.1",
+        "react-input-mask": "^2.0.4",
         "tailwind-merge": "^2.3.0",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/react-input-mask": "^3.0.5",
         "eslint": "^8",
         "eslint-config-next": "14.2.4",
         "postcss": "^8",
