--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
         "@supabase/supabase-js": "^2.44.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "html-to-image": "^1.11.11",
+        "html2canvas": "^1.4.1",
+        "jspdf": "^2.5.1",
         "lucide-react": "^0.397.0",
         "next": "14.2.4",
         "next-auth": "5.0.0-beta.19",
