--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "clsx": "^2.1.1",
         "html-to-image": "^1.11.11",
         "html2canvas": "^1.4.1",
+        "html2pdf.js": "^0.10.2",
         "jspdf": "^2.5.1",
         "lucide-react": "^0.397.0",
         "next": "14.2.4",
@@ -39,6 +40,7 @@
         "react-dom": "^18",
         "react-hook-form": "^7.52.1",
         "react-input-mask": "^2.0.4",
+        "react-to-print": "^2.15.1",
         "tailwind-merge": "^2.3.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.8"
