--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "html-to-image": "^1.11.11",
         "html2canvas": "^1.4.1",
         "html2pdf.js": "^0.10.2",
+        "js-html2pdf": "^1.1.4",
         "jspdf": "^2.5.1",
         "lucide-react": "^0.397.0",
         "next": "14.2.4",
