--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
         "@radix-ui/react-toast": "^1.2.1",
         "@radix-ui/react-tooltip": "^1.1.1",
         "@supabase/supabase-js": "^2.44.2",
+        "@tanstack/react-table": "^8.19.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "date-fns": "^3.6.0",
         "html-to-image": "^1.11.11",
         "html2canvas": "^1.4.1",
         "html2pdf.js": "^0.10.2",
